@@ -1,6 +1,7 @@
 
 3.59  2012-11-20
   - Improved tests.
+  - Fixed memory leak in Mojo::Message::Request.
   - Fixed keep alive bug in Mojo::Server::Daemon.
 
 3.58  2012-11-19
